# django-aiogram

./: .env.example  .gitignore  README.md  pyproject.toml
src/bot/: helpers.py  misc.py  urls.py  views.py
src/bot/routers/: __init__.py  main.py
src/bot/utils/: storage.py
src/config/: asgi.py  lifespan.py  settings.py  urls.py
src/users/: managers.py  models.py
src/users/migrations/: 0001_initial.py
