[project]
name = "django-aiogram"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Suhrob", email = "mlkv.dev@gmail.com" }
]
dependencies = [
    "django>=5.2",
    "aiogram>=3.19.0",
    "ipython>=9.0.2",
    "python-decouple>=3.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
